safari overflow fix

--- a/styles.less
+++ b/styles.less
@@ -336,6 +336,9 @@ main {
     border-radius: 12px;
     background: @color-input;
 
+    // allows Safari border-radius to work with overflow
+    -webkit-mask-image: -webkit-radial-gradient(white, black);
+
     .ui {
       pointer-events: none;
       display: flex;
